# genki-wave

./: .gitignore  .gitmodules  LICENSE  README.md  requirements.txt  setup.py
.github/workflows/: pr_checks.yml
android/: README.md
android/WaveApiDemo/app/src/main/: AndroidManifest.xml
android/WaveApiDemo/app/src/main/java/com/genki/waveapidemo/: MainActivity.java
android/WaveApiDemo/app/src/main/res/values/: strings.xml
android/WaveApiDemo/app/src/test/java/com/genki/waveapidemo/: ExampleUnitTest.java
android/examples/WaveApiDemo/: settings.gradle
android/examples/WaveApiDemo/app/: build.gradle
android/examples/WaveApiDemo/app/src/androidTest/java/com/genki/waveapidemo/: ExampleInstrumentedTest.java
android/examples/WaveApiDemo/app/src/main/: AndroidManifest.xml
android/examples/WaveApiDemo/app/src/main/res/layout/: activity_main.xml
android/examples/WaveApiDemo/gradle/wrapper/: gradle-wrapper.properties
android/genki-wave/: settings.gradle
android/genki-wave/gradle/wrapper/: gradle-wrapper.properties
cpp/: CMakeLists.txt  README.md
cpp/cmake/: CPM.cmake  juce_Messaging_linux.cpp.patch
cpp/examples/: CMakeLists.txt
cpp/examples/wave_api_stream/: CMakeLists.txt
cpp/examples/wave_api_stream/src/: main.cpp
cpp/examples/wave_api_tap/: CMakeLists.txt
cpp/examples/wave_api_tap/src/: main.cpp
cpp/genki-wave/: CMakeLists.txt
cpp/genki-wave/include/: ble_packetizer.h  ble_transport.h  cobs.h  cobs_codec.h  format.h  requests.h  sml_wrapper.h  txrx.h  utility.h  wave_api_device.h  wave_public_types.h
docs/: README.md
docs/source/: conf.py  genki_wave.data.rst  genki_wave.rst  index.rst  modules.rst
examples/: discover_wave.py  run_async.py  run_midi.py  run_threads.py  write_to_ring.py
genki_wave/: __init__.py  asyncio.py  asyncio_runner.py  asyncio_runners.py  callbacks.py  constants.py  data_organization.py  data_stream_manipulation.py  data_structures.py  discover.py  protocols.py  quaternions.py  run_pywave.py  speed_experiments.py  threading.py  threading_runner.py  threading_runners.py  utils.py  wave_asyncio.py  wave_threading.py
genki_wave/data/: __init__.py  data_organization.py  data_structures.py  enums.py  organization.py  organization_elements.py  points.py  quaternions.py  writing.py
js/: README.md  package.json
js/examples/cli/: CMakeLists.txt  binding.gyp  package.json  pnpm-lock.yaml  pull.ts  tsconfig.json
js/examples/cli/lib/: packet_handler.h
js/examples/cli/src/: addon.ts  genki-wave.ts  index.ts
js/examples/cli/src/cpp/: packet_handler.cpp  packet_handler.h
js/examples/stream/: README.md  package.json
js/genki-wave/: CMakeLists.txt  README.md  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
js/genki-wave/lib/: addon.cpp  packet_handler.cpp
js/genki-wave/src/: index.ts
tests/: constants.py  test_data_organization.py  test_data_structures.py  test_points.py  test_protocols.py  test_quaternions.py  test_wave_asyncio.py
